# zk_whitelist

./: CHANGELOG.md  Cargo.toml  README.md  package.json  release.config.js  update_version.sh
.github/workflows/: release.yml  rust_test.yml
src/: cli.rs  lib.rs  main.rs
src/cli/commands/: all.rs  circuit.rs  compile.rs  mod.rs  movejs.rs  proofs.rs  setup.rs  token.rs  verifier.rs
src/commands/: circuit.rs  compile.rs  setup.rs
src/utils/: command_runner.rs  filesystem_operations.rs  mod.rs
templates/: circuit.circom  zkToken.sol
tests/: circuit_command_tests.rs  clap_general_commands_test.rs  compile_command_tests.rs  movejs_command_test.rs  proofs_command_tests.rs  setup_command_test.rs  setup_command_tests.rs  verifier_command_test.rs  version_command_tests.rs
