[package]
name = "zk_whitelist"
version = "1.9.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version= "4.4.7", features = ["derive"] }
fake = { version = "2.9", features = ["derive"] }
num-bigint = "0.4.4"
serde_json = "1.0.108"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"

[[bin]]
name = "zk_whitelist"
path = "src/main.rs"
